# kodiak-validator

./: CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: cargo-tarpaulin.yml
src/: domain.rs  lib.rs
tests/: domain.rs  email_address.rs  lib.rs
